--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,7 +5,7 @@ global:
 scrape_configs:
   - job_name: "livekit-agent"
     static_configs:
-      - targets: ["container02:9100"]
+      - targets: ["localhost:9100"]
     metrics_path: "/metrics"
     scrape_interval: 5s
     scrape_timeout: 4s
